deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-fe
  labels:
    app.kubernetes.io/name: media-fe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: media-fe
  ports:
    - name: http
      port: 80
      targetPort: http
